--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   - assets/image.jpg
   - assets/circles.png
   - assets/logo.png
+  - assets/login_page.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
