--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.2.8
   modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   introduction_screen: ^3.1.6
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
