--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +46,11 @@ dependencies:
   modal_progress_hud_nsn: ^0.1.0-nullsafety-0
   introduction_screen: ^3.1.6
   get_it: ^7.2.0
+  easy_localization: ^3.0.1
+  flutter_fft: ^1.0.2+6
+  riverpod: ^2.3.2
+  shared_preferences: ^2.0.18
+  #flutter_sound: ^9.2.13
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +80,8 @@ flutter:
   - assets/circles.png
   - assets/logo.png
   - assets/login_page.png
+  - assets/translations/en.json
+  - assets/translations/fr.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
