--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   #riverpod: ^2.3.2
   flutter_riverpod: ^0.14.0+3
   shared_preferences: ^2.0.18
+  get:
 
   #flutter_sound: ^9.2.13
 
