removed unnecessary files and formatted the code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,12 +79,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/image.jpg
+  - assets/image.png
   - assets/circles.png
   - assets/logo.png
   - assets/login_page.png
-  - assets/translations/en.json
-  - assets/translations/fr.json
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
